crates/weft-snapshots/tests/snapshots/react-jsx/example-screen.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-screen as react-jsx
---
export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="root" data-state="ready" aria-label="Home">
      <h1 data-weft-id="title">Welcome back</h1>
      <div data-weft-id="intro">Pick up where you left off.</div>
    </main>
  );
}
