crates/weft-snapshots/tests/snapshots/react-jsx/example-select.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-select as react-jsx
---
import { Fragment } from "react";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _keyed(list) {
  return list.map((x, i) => <Fragment key={i}>{x}</Fragment>);
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="root" aria-label="Locale">
      <label>
        <span aria-hidden="true">Country</span>
        {(() => {
          const _o = [
            { value: "pt", el: (
              <option data-weft-id="c-pt" value="pt">Portugal</option>
            ) },
            { value: "es", el: (
              <option data-weft-id="c-es" value="es">Spain</option>
            ) },
          ];
          return (
            <select data-weft-id="country" aria-label="Country" value={_text(data?.country)} onChange={(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); onChange?.("$.country", _c ? _c.value : _e.currentTarget.value); _act(actions, { id: "country", action: "profile.update" }); }}>
              {_keyed(_o.map((_x) => _x.el))}
            </select>
          );
        })()}
      </label>
    </main>
  );
}
